--- a/css/drawstyle.css
+++ b/css/drawstyle.css
@@ -3,7 +3,10 @@ body{
     font-family:'Noto Sans';
     font-weight: 300;
 }
-
+.navbar-brand img{
+    max-height: 60px;
+    height: 100%;
+}
 #navbarSupportedContent{
     justify-content: space-between;
 }
@@ -176,4 +179,5 @@ i{
       max-width: 100% !important;
     }
   }
+
  */
