--- a/css/drawstyle.css
+++ b/css/drawstyle.css
@@ -95,6 +95,9 @@ i{
 .small{
     font-size: 12px;
 }
+input{
+    padding: 0;
+}
 .book-swiper {
     width: 100%;
     height: 100%;
@@ -130,9 +133,6 @@ i{
     max-height: 600px;
 }
 
-.content{
-    overflow-y: auto;
-}
 @media screen and (max-width: 576px){
     .main{
         margin-top: 70px;
