--- a/css/drawstyle.css
+++ b/css/drawstyle.css
@@ -84,6 +84,8 @@ video {
 input{
     border-radius: 99em;
     height: 50px;
+    padding: 0;
+    line-height: 50px;
 }
 button{
     background: none;
@@ -94,9 +96,6 @@ i{
 }
 .small{
     font-size: 12px;
-}
-input{
-    padding: 0;
 }
 .book-swiper {
     width: 100%;
