--- a/css/drawstyle.css
+++ b/css/drawstyle.css
@@ -131,13 +131,17 @@ i{
     max-height: 600px;
     background: #fff;
     padding: 24px;
-    box-shadow: 0 10px 30px rgba(0,0,0,.3);
-    overflow-y: auto !important;
+    box-shadow: 0 10px 30px rgba(0,0,0,.3); 
 }
 
 .page * {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.page > .row {
+    height: 100%;
+    overflow-y: auto;
 }
 
 .swiper-button-prev, .swiper-button-next{
