--- a/css/drawstyle.css
+++ b/css/drawstyle.css
@@ -132,6 +132,7 @@ i{
     background: #fff;
     padding: 24px;
     box-shadow: 0 10px 30px rgba(0,0,0,.3); 
+    overflow: hidden;
 }
 
 .page * {
@@ -139,10 +140,10 @@ i{
     -moz-osx-font-smoothing: grayscale;
 }
 
-.page > .row {
+/* .page > .row {
     height: 100%;
     overflow-y: auto;
-}
+} */
 
 .swiper-button-prev, .swiper-button-next{
     display: none;
