--- a/css/drawstyle.css
+++ b/css/drawstyle.css
@@ -126,13 +126,21 @@ i{
 
 .page {
     width: 100%;
-    height: 100%;
+    height: 600px; 
     max-width: 1100px;
     max-height: 600px;
     background: #fff;
-    padding: 24px;
+    padding: 0px;
     box-shadow: 0 10px 30px rgba(0,0,0,.3); 
     overflow: hidden;
+}
+
+.page-inner {
+    height: 100%;
+    padding: 24px;
+    overflow-y: auto;       /* 滾動放在這 */
+    overscroll-behavior: contain;
+    -webkit-overflow-scrolling: touch;
 }
 
 .page * {
