--- a/css/drawstyle.css
+++ b/css/drawstyle.css
@@ -138,9 +138,10 @@ i{
 .page-inner {
     height: 100%;
     padding: 24px;
-    overflow-y: auto;       /* 滾動放在這 */
+    overflow-y: auto;       
     overscroll-behavior: contain;
     -webkit-overflow-scrolling: touch;
+    touch-action: pan-y;
 }
 
 .page * {
@@ -159,9 +160,9 @@ i{
 
 .swiper-wrapper{
     width: 100%;
-    height: 100%;
+    height: 100%;/* 
     max-width: 1100px;
-    max-height: 600px;
+    max-height: 600px; */
 }
 
 .content{
@@ -193,12 +194,8 @@ i{
 
     /* 文字區 */
     .content {
-        max-height: 35vh;
-        overflow-y: auto;
+        /* max-height: 35vh; */
         padding: 16px !important;
-    }
-    .swiper-slide {
-        touch-action: pan-y;
     }
     .navbar-brand img{
         max-width: 300px;
