--- a/css/drawstyle.css
+++ b/css/drawstyle.css
@@ -175,7 +175,7 @@ i{
     }
     .book-swiper {
         max-width: 100%;
-        height: 90vh;
+        /* height: 90vh; */
     }
 
     .swiper-wrapper,
