--- a/css/drawstyle.css
+++ b/css/drawstyle.css
@@ -2,6 +2,7 @@ html{
     background: linear-gradient(133deg, rgb(0 0 0) 51%, rgb(66 65 65) 100%);
 }
 body{
+    height: 100vh;
     background: linear-gradient(133deg, rgb(0 0 0) 51%, rgb(66 65 65) 100%);
     font-family:'Noto Sans';
     font-weight: 300;
@@ -97,8 +98,8 @@ input{
     border-radius: 99em;
     width: fit-content;
     padding: 0 16px;
-    /* background: linear-gradient(-75deg, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.05));
-    box-shadow: inset 0 0.125em 0.125em 0.125em rgba(0, 0, 0, 0.05), inset 0 -0.125em 0.25em 0em rgb(255 255 255 / 64%), 0 0.25em 0.5em 0em rgb(0 0 0 / 0.2), inset 0 0 0.5em 0.25em rgb(255 255 255 / 20%); */
+    background: linear-gradient(-75deg, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.05));
+    box-shadow: inset 0 0.125em 0.125em 0.125em rgba(0, 0, 0, 0.05), inset 0 -0.125em 0.25em 0em rgb(255 255 255 / 64%), 0 0.25em 0.5em 0em rgb(0 0 0 / 0.2), inset 0 0 0.5em 0.25em rgb(255 255 255 / 20%);
     transition: .2s ease-in-out;
     margin-inline: 8px;
 }
