--- a/css/drawstyle.css
+++ b/css/drawstyle.css
@@ -1,9 +1,6 @@
-html{
-    background: linear-gradient(133deg, rgb(0 0 0) 51%, rgb(66 65 65) 100%);
-}
 body{
     height: 100vh;
-    background: linear-gradient(133deg, rgb(0 0 0) 51%, rgb(66 65 65) 100%);
+    background: linear-gradient(133deg,rgb(66 65 65) 0%, rgb(0 0 0) 51%, rgb(66 65 65) 100%)
     font-family:'Noto Sans';
     font-weight: 300;
 }
@@ -223,3 +220,4 @@ i{
     }
   }
  */
+
