--- a/css/drawstyle.css
+++ b/css/drawstyle.css
@@ -1,6 +1,6 @@
 body{
     height: 100vh;
-    background: linear-gradient(133deg,rgb(66 65 65) 0%, rgb(0 0 0) 51%, rgb(66 65 65) 100%)
+    background: linear-gradient(133deg,rgb(66 65 65) 0%, rgb(0 0 0) 51%, rgb(66 65 65) 100%);
     font-family:'Noto Sans';
     font-weight: 300;
 }
@@ -220,4 +220,5 @@ i{
     }
   }
  */
+
 
